--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -77,6 +77,7 @@
         flex-direction: column;
         position: relative;
         flex-grow: 1;
+        z-index: -1;
 
         &:focus-within {
             &:has(label) {
