--- a/lib/components/ActionSheet/portal/portal.scss
+++ b/lib/components/ActionSheet/portal/portal.scss
@@ -38,7 +38,7 @@
         margin-right: auto;
         display: flex;
         max-height: 90vh;
-        min-width: 320px;
+        width: 100%;
         max-width: 800px;
         flex-direction: column;
         overflow-y: auto;
