--- a/lib/components/SelectionControl/radio/radio-button/radio-button.scss
+++ b/lib/components/SelectionControl/radio/radio-button/radio-button.scss
@@ -18,20 +18,26 @@
             svg {
                 display: flex;
                 flex-direction: column;
-    
+
                 &:focus {
                     outline: none;
-    
+
                     &-visible {
                         border: none;
                         border-radius: 50%;
-                        box-shadow: 0 0 var(--core-borderWidth-75) var(--core-borderWidth-100) var(--core-color-solid-blue-700) inset;
+                        box-shadow: 0 0 var(--core-borderWidth-75)
+                            var(--core-borderWidth-100)
+                            var(--core-color-solid-blue-700) inset;
                     }
                 }
             }
 
             &--disabled {
                 cursor: default;
+            }
+
+            &--right {
+                order: 3;
             }
         }
         &__input {
