--- a/lib/components/Atom/Calendar/date-picker.scss
+++ b/lib/components/Atom/Calendar/date-picker.scss
@@ -20,10 +20,27 @@
             margin-bottom: var(--semantic-spacing-general-md);
 
             button:enabled:hover,
-            button:enabled:focus {
+            button:enabled:focus,
+            button:disabled {
+                background-color: unset;
+            }
+
+            button:enabled:hover:is(.react-calendar__navigation__arrow),
+            button:enabled:focus:is(.react-calendar__navigation__arrow) {
+                border-radius: var(--core-borderRadius-600);
                 background-color: var(
                     --semantic-color-monochrome-surface-normal-low
                 );
+            }
+
+            button:enabled:hover:is(.react-calendar__navigation__label),
+            button:disabled:hover:is(.react-calendar__navigation__label) {
+                span {
+                    color: var(--component-textIcon-normal-prominent);
+                    font-weight: var(
+                        --semantic-typography-body-sm-bold-default-fontWeight
+                    );
+                }
             }
 
             &__arrow.react-calendar__navigation__prev-button,
