--- a/lib/components/Atom/Calendar/date-picker.scss
+++ b/lib/components/Atom/Calendar/date-picker.scss
@@ -33,13 +33,8 @@
                 );
             }
 
-            button:enabled:active:is(.react-calendar__navigation__label),
             button:enabled:focus:is(.react-calendar__navigation__label),
-            button:disabled:is(.react-calendar__navigation__label) {
-                span {
-                    color: var(-component-dropdownItem-label-color-selected);
-                }
-            }
+            button:disabled:is(.react-calendar__navigation__label),
             button:enabled:active:is(.react-calendar__navigation__label) {
                 span {
                     color: var(-component-dropdownItem-label-color-selected);
