fix: mobile NotificationBanners width

--- a/lib/components/Notification/notification.scss
+++ b/lib/components/Notification/notification.scss
@@ -101,10 +101,11 @@
         position: absolute;
         width: 360px;
         bottom: var(--semantic-spacing-general-sm);
-        left: var(--semantic-spacing-general-sm);
+        inset-inline-start: var(--semantic-spacing-general-sm);
         z-index: 6;
 
         &--mobile {
+            width: calc(100% - var(--semantic-spacing-general-md));
             top: var(--semantic-spacing-general-sm);
             bottom: unset;
             width: calc(100vw - var(--size-generic-xs));
