fix: add z-index to label only to type select

--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -78,6 +78,10 @@
         position: relative;
         flex-grow: 1;
 
+        &:has(input[type="select"]) {
+            z-index: -1;
+        }
+
         &:focus-within {
             &:has(label) {
                 padding-top: var(--core-spacing-600);
