fix: added sun icon instead css

--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -48,6 +48,14 @@
             transform: rotate(180deg);
         }
     }
+    &__loader-icon {
+        animation: spin 2s linear infinite;
+    }
+    
+    @keyframes spin {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+    }
 
     &__full-width {
         width: 100%;
