fix: updated link component from button to link

--- a/lib/components/Link/link.scss
+++ b/lib/components/Link/link.scss
@@ -25,7 +25,7 @@
         text-decoration: var(--core-fontDecoration-underline);
     }
 
-    &:disabled {
+    &--disabled {
         pointer-events: none;
         opacity: var(--opacity-disabled);
     }
@@ -70,5 +70,4 @@
             }
         }
     }
-
 }
