--- a/lib/components/Tooltip/tooltip.scss
+++ b/lib/components/Tooltip/tooltip.scss
@@ -14,6 +14,9 @@
                 flex-direction: column;
                 min-width: var(--core-size-4300);
             }
+            &-title {
+                padding-right: var(--core-size-1200);
+            }
             &-header {
                 display: flex;
                 justify-content: space-between;
