Akmal / feat: add input with steppers (#120)
* feat: add input with steppers

* chore: types and logs

* chore: update storybook for input with steppers

* feat: add testcases for input with steppers

* feat: base component modifications

* feat: steppers component modificaations

* feat: steppers component storybook

* feat: steppers component snapshot

* fix: remove focus style and size condition

* feat: generalize steppers

* feat: styles & stories updates for steppers

* fix: import and broken story

* fix: import

* fix: remove fixed values and unused snapshots

* fix: add missing import

* fix: add placeholder to storybook

* fix: add placeholder to storybook

* fix: change type

* feat: apply nitpicks

--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -74,7 +74,6 @@
 
     &-label__wrapper {
         display: flex;
-        flex-direction: column;
         position: relative;
         flex-grow: 1;
 
@@ -108,7 +107,19 @@
     }
 
     &-no-label__wrapper {
+        display: flex;
         width: 100%;
+    }
+
+    &-label__label {
+        margin: auto var(--core-spacing-200) auto;
+
+        &--right {
+            margin-left: var(--core-spacing-200);
+        }
+        &--disabled {
+            opacity: var(--core-opacity-600);
+        }
     }
 
     &__wrapper {
