fix: updated tokens for tag and updated snapshot

--- a/lib/components/Tag/tag.scss
+++ b/lib/components/Tag/tag.scss
@@ -2,95 +2,146 @@
 
 .tag {
     min-width: auto;
-    border-radius: var(--core-borderRadius-200);
+    
     display: inline-flex;
     align-items: center;
     justify-self: center;
 
     &__size {
         &-sm {
-            padding: var(--temp-static-spacing-3) var(--core-spacing-400);
-            gap: var(--core-spacing-400);
+            padding-inline: var(--component-tag-spacing-padding-sm);
+            gap: var(--component-tag-spacing-padding-sm);
+            height: var(--component-tag-height-sm);
+            border-radius: var(--component-tag-border-radius-xs);
+            &>svg {
+                width: 12px;
+                height: 18px;
+            }
         }
 
         &-xs {
-            padding: var(--core-spacing-100) var(--core-spacing-200);
-            gap: var(--core-spacing-200);
+            padding-inline: var(--component-tag-spacing-gap-xs);
+            gap: var(--component-tag-spacing-gap-xs);
+            height: var(--component-tag-height-xs);
+            border-radius: var(--component-tag-border-radius-xs);
+            &>svg {
+                width: 12px;
+                height: 18px;
+            }
         }
 
         &-md {
-            padding: var(--temp-static-spacing-5) var(--core-spacing-600);
-            gap: var(--core-spacing-600);
+            padding-inline: var(--component-tag-spacing-gap-md);
+            gap: var(--component-tag-spacing-gap-md);
+            height: var(--component-tag-height-md);
+            border-radius: var(--component-tag-border-radius-sm);
+            &>svg {
+                width: 14px;
+                height: 22px;
+            }
         }
 
         &-lg {
-            padding: var(--core-spacing-600) var(--core-spacing-800);
-            gap: var(--core-spacing-800);
+            padding-inline: var(--component-tag-spacing-gap-lg);
+            gap: var(--component-tag-spacing-gap-lg);
+            height: var(--component-tag-height-lg);
+            border-radius: var(--component-tag-border-radius-md);
+            &>svg {
+                width: 16px;
+                height: 24px;
+            }
         }
     }
-
+    &__icon {
+        display: flex;
+        align-items: center;
+        &--xs {
+            &>svg{
+                width: var(--core-spacing-600);
+                height: var(--core-spacing-900);
+            }
+        }
+        &--sm {
+            &>svg{
+                width: var(--core-spacing-600);
+                height: var(--core-spacing-900);
+            }
+        }
+        &--md {
+            &>svg{
+                width: var(--core-spacing-700);
+                height: var(--core-spacing-1100);
+            }
+        }
+        &--lg {
+            &>svg{
+                width: var(--core-spacing-800);
+                height: var(--core-spacing-1200);
+            }
+        }
+    }
     &__color {
         &--success {
-            color: var(--core-color-solid-green-800);
+            color: var(--component-tag-label-color-success);
 
             &-fill {
-                background-color: var(--core-color-opacity-green-100);
+                background-color: var(--component-tag-bg-success);
             }
 
             &-outline {
-                border: var(--core-borderWidth-75) solid var(--core-color-solid-green-700);
+                border: var(--component-tag-border-width) solid var(--component-tag-border-color-success);
             }
 
             &-svg {
-                fill: var(--core-color-solid-green-800)
+                fill: var(--component-tag-icon-success)
             }
         }
 
         &--error {
-            color: var(--core-color-solid-red-800);
+            color: var(--component-tag-label-color-danger);
 
             &-fill {
-                background-color: var(--core-color-opacity-red-100);
+                background-color: var(--component-tag-bg-danger);
             }
 
             &-outline {
-                border: var(--core-borderWidth-75) solid var(--core-color-solid-red-700);
+                border: var(--component-tag-border-width) solid var(--component-tag-border-color-danger);
             }
 
             &-svg {
-                fill: var(--core-color-solid-red-800)
+                fill: var(--component-tag-icon-danger)
             }
         }
 
         &--warning {
-            color: var(--core-color-solid-orange-800);
+            color: var(--component-tag-label-color-warning);
 
             &-fill {
-                background-color: var(--core-color-opacity-orange-100);
+                background-color: var(--component-tag-bg-warning);
             }
 
             &-outline {
-                border: var(--core-borderWidth-75) solid var(--core-color-solid-orange-700);
+                border: var(--component-tag-border-width) solid var(--component-tag-border-color-warning);
             }
 
             &-svg {
-                fill: var(--core-color-solid-orange-800)
+                fill: var(--component-tag-icon-warning)
             }
         }
 
         &--info {
-            color: var(--core-color-solid-blue-800);
+            color: var( --component-tag-label-color-information);
 
             &-fill {
-                background-color: var(--core-color-opacity-blue-100);
+                background-color: var(--component-tag-bg-information);
             }
 
             &-outline {
-                border: var(--core-borderWidth-75) solid var(--core-color-solid-blue-700);
+                border: var(--component-tag-border-width) solid var( --component-tag-border-color-information);
             }
 
             &-svg {
-                fill: var(--core-color-solid-blue-800)
+                fill: var(--component-tag-icon-information)
             }
         }
     }
