--- a/lib/components/SectionMessage/section-message.scss
+++ b/lib/components/SectionMessage/section-message.scss
@@ -27,6 +27,11 @@
             display: flex;
             flex-direction: column;
             gap: var(--semantic-spacing-gap-md);
+
+            p {
+                white-space: pre-wrap;
+                word-break: break-word;
+            }
         }
     }
 
