--- a/lib/components/Button/social/social.scss
+++ b/lib/components/Button/social/social.scss
@@ -25,7 +25,7 @@
                 border-color: transparent;
                 background-color: var(--component-button-bg-google-primary-default);
                 color: var(--component-button-label-color-google-primary);
-
+                fill: var(--component-button-label-color-google-primary);
                 &:hover:not(:disabled) {
                     background-color: var(--component-button-bg-google-primary-hover);
                 }
@@ -45,6 +45,7 @@
                 border-color: transparent;
                 background-color: #1877F2;
                 color: var(--core-color-solid-slate-50);
+                fill: var(--core-color-solid-slate-50);
 
                 &:hover:not(:disabled) {
                     background-color: #166DDF;
@@ -65,6 +66,7 @@
                 background-color: var(--core-color-solid-slate-1400);
                 color: var(--core-color-solid-slate-50);
                 border-color: transparent;
+                fill: var(--core-color-solid-slate-50);
 
                 &:hover:not(:disabled) {
                     background-color: var(--core-color-solid-slate-700);
@@ -86,6 +88,7 @@
             border-style: solid;
             border-color: var(--component-button-border-color-google);
             color: var(--component-button-label-color-google-secondary);
+            fill: var(--component-button-label-color-google-secondary);
 
             &:hover:not(:disabled) {
                 background-color: var(--core-color-opacity-black-100);
