--- a/lib/components/Snackbar/snackbar.scss
+++ b/lib/components/Snackbar/snackbar.scss
@@ -4,14 +4,14 @@
     display: flex;
     width: calc(100vw - var(--core-spacing-1600));
     max-width: 560px;
-    min-height: var(--core-size-2400);
-    padding: var(--semantic-spacing-general-sm)
-        var(--semantic-spacing-general-md) var(--semantic-spacing-general-sm);
+    min-height: var(--component-snackbar-height-min);
+    padding: var(--component-snackbar-spacing-padding-sm)
+        var(--component-snackbar-spacing-padding-md) var(--component-snackbar-spacing-padding-sm);
     align-items: center;
-    gap: var(--semantic-spacing-gap-md);
-    border-radius: var(--semantic-borderRadius-md);
-    border: var(--borderWidth-xs) solid var(--core-color-opacity-white-100);
-    background: var(--core-color-solid-slate-1400);
+    gap: var(--component-snackbar-spacing-gap);
+    border-radius: var(--component-snackbar-border-radius);
+    border: var( --component-snackbar-border-width) solid var(--component-snackbar-border-color);
+    background: var(--component-snackbar-bg);
     box-shadow: var(--core-elevation-shadow-330);
     position: fixed;
     z-index: 1;
@@ -34,17 +34,18 @@
 
     @include breakpoint("sm") {
         display: inline-flex;
-        width: 560px;
+        width: var(--component-snackbar-width-max);
     }
 
     &__icon--container {
         display: flex;
-        width: var(--core-spacing-1200);
-        height: var(--core-spacing-1200);
-        flex-direction: column;
+       flex-direction: column;
         justify-content: center;
         align-items: center;
         flex-shrink: 0;
+        &>svg {
+           fill : var(--component-snackbar-icon);
+        }
     }
     &__message {
         display: -webkit-box;
@@ -55,7 +56,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         word-wrap: break-word; /* Text gets broken up into another line for long words */
-        color: var(--core-color-solid-slate-50);
+        color: var(--component-snackbar-label-color);
 
         @include breakpoint("sm") {
             -webkit-line-clamp: 1;
